--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -8,55 +8,52 @@
     android:layout_gravity="center"
     android:layout_marginBottom="16dp"
     android:layout_marginStart="16dp"
-    card_view:cardCornerRadius="8dp">
+    card_view:cardCornerRadius="12dp"
+    card_view:cardElevation="6dp"
+    android:background="@drawable/gradient_bg">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="165dp"
-        android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp">
 
+        <!-- Gambar -->
         <ImageView
             android:id="@+id/result_image"
-            android:layout_width="165dp"
-            android:layout_height="165dp"
-            android:scaleType="fitXY"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent"
-            card_view:layout_constraintVertical_bias="0.0"
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:scaleType="centerCrop"
+            android:background="@drawable/ic_place_holder"
             tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
+        <!-- Judul -->
         <TextView
             android:id="@+id/result_here"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_toEndOf="@id/result_image"
-            android:ellipsize="end"
-            android:textSize="14sp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textSize="16sp"
             android:textStyle="bold"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
+            android:maxLines="2"
+            android:textAlignment="center"
+            android:ellipsize="end"
             card_view:layout_constraintTop_toBottomOf="@id/result_image"
-            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
             tools:text="@string/result_here" />
 
+        <!-- Timestamp -->
         <TextView
             android:id="@+id/timestamp"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginHorizontal="8dp"
-            android:layout_marginVertical="8dp"
-            android:maxLines="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:textSize="12sp"
-            android:text="@string/timestamp"
-            android:textAlignment="textEnd"
+            android:textColor="@android:color/darker_gray"
             card_view:layout_constraintTop_toBottomOf="@id/result_here"
+            card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent" />
+            tools:text="dd/mm/yyyy" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
