--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <!-- Primary Colors -->
+    <color name="orange_200">#FFF5C26B</color> <!-- Soft Yellow-Orange -->
+    <color name="orange_500">#FFFF8C42</color> <!-- Main Orange -->
+    <color name="orange_700">#FFD85A1A</color> <!-- Deep Orange -->
+
+    <!-- Accent Colors -->
+    <color name="deep_orange">#FFB33F00</color> <!-- Dark Orange -->
+    <color name="warm_yellow">#FFFDC500</color> <!-- Bright Yellow -->
+
+    <!-- Neutral & Background -->
+    <color name="brown_neutral">#FF6D4C41</color> <!-- Chocolate Brown -->
+    <color name="soft_cream">#FFFFF8E1</color> <!-- Light Cream -->
+    <color name="warm_beige">#FFDAB9</color>
+    <color name="dark_gray">#2E2E2E</color>
+
+    <color name="gray_neutral">#D6D6D6</color>
+    <color name="dark_brown">#4E342E</color>
+    <color name="charcoal">#2B2B2B</color>
+
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
